force-app/main/default/objects/GRMS_Localization__mdt/fields/GRMS_Locale__c.field-meta.xml
<CustomField>
    <fullName>GRMS_Locale__c</fullName>
    <label>Locale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ne</fullName>
                <default>true</default>
                <label>ne</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>