force-app/main/default/objects/GRMS_Localization__mdt/fields/GRMS_OriginalName__c.field-meta.xml
<CustomField>
    <fullName>GRMS_OriginalName__c</fullName>
    <label>Original Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>