force-app/main/default/objects/GRMS_Localization__mdt/fields/GRMS_TranslatedLabel__c.field-meta.xml
<CustomField>
    <fullName>GRMS_TranslatedLabel__c</fullName>
    <label>Translated Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>