force-app/main/default/objects/GRMS_Localization__mdt/fields/GRMS_Type__c.field-meta.xml
<CustomField>
    <fullName>GRMS_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RecordType</fullName>
                <default>true</default>
                <label>RecordType</label>
            </value>
            <value>
                <fullName>PageLayoutSection</fullName>
            </value>
            <value>
                <fullName>PageLayoutItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>