force-app/main/default/objects/GRMS_Localization__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>GRMS_Locale__c</columns>
    <columns>GRMS_Type__c</columns>
    <columns>GRMS_OriginalName__c</columns>
    <columns>GRMS_TranslatedLabel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>